Removed search-sub-section-stats style from stats filters on Search page and Site.css - this did not display correctly on mobile devices.

--- a/HallOfBeorn/HallOfBeorn/Content/Site.css
+++ b/HallOfBeorn/HallOfBeorn/Content/Site.css
@@ -633,13 +633,6 @@ tr.pager td {
     margin-bottom: 4px;
 }
 
-.search-sub-section-stats {
-    display: block;
-    height: 24px;
-    margin-top: 4px;
-    margin-bottom: 4px;
-}
-
 .search-items {
     display: inline-block;
 }
